[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/chat-gpt/core/http.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/generate_picture.gd" type="Script" id=3]
[ext_resource path="res://Test/generated_picture.tscn" type="PackedScene" id=4]

[node name="GeneratePicture" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Prompt_label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1004.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PromptEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 909.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "An Impressionist oil painting of sunflowers in a purple vase..."

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 913.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Generate"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="FirstPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 236.0
margin_bottom = 534.0

[node name="SecondPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 256.0
margin_right = 492.0
margin_bottom = 534.0

[node name="ThirdPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 512.0
margin_right = 748.0
margin_bottom = 534.0

[node name="FourthPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 768.0
margin_right = 1004.0
margin_bottom = 534.0

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.0
margin_top = -244.0
margin_right = 417.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Close" type="Button" parent="PopupDialog"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 16.0
margin_right = -25.0
margin_bottom = 56.0
text = "Close"

[node name="NextPicture" type="Button" parent="PopupDialog"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -12.0
margin_right = -62.0
margin_bottom = 12.0
text = "->"

[node name="BacktPicture" type="Button" parent="PopupDialog"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -12.0
margin_right = 106.0
margin_bottom = 12.0
text = "<-"

[node name="HTTP" parent="." instance=ExtResource( 2 )]

[connection signal="text_entered" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer/PromptEdit" to="." method="_on_PromtEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer/Button" to="." method="_on_Send_Button_pressed"]
[connection signal="button_down" from="PopupDialog/Close" to="." method="_on_Close_button_down"]
[connection signal="images_request_completed" from="HTTP" to="." method="_on_HTTP_images_request_completed"]
